--- a/index.html
+++ b/index.html
@@ -7,8 +7,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="text-center">twitch.tv</h1>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="javascript.js"></script>
+  <header>
+    <h1 class="text-center">twitch.tv</h1>
+  <section>
+    <div class="text-center">
+      <input type="text" name="search" id="search_input" placeholder="Search..">
+      <button id="search_button" type="button">Search</button>
+    </div>
+  </section>
+  </header>
+  <main  class="main_div container">
+    <div class="row">
+      <div class="spacer col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <img src="" alt="channel logo">
+        <p></p>
+        <h2></h2>
+      </div>
+      <div class="spacer col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <img src="" alt="channel logo">
+        <p></p>
+        <h2></h2>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <p>This web application is built using <a href="https://www.mediawiki.org/wiki/API:Main_page" target="_blank">MediaWiki</a> action API</p>
+    <p>Coded by <a href="https://www.facebook.com/IgorsPalcevskis" target="_blank">Igors Palcevskis<a></p>
+  </footer>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="javascript.js"></script>
 </body>
 </html>
