More CSS and HTML
Tinkered with HTML elements and CSS to design layout of web page. Added meta tag for viewport and ie_edge

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FCC TwitchTV</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -18,17 +20,36 @@
   </header>
   <main  class="main_div container">
     <div class="row">
-      <div class="spacer col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <img src="" alt="channel logo">
-        <p></p>
-        <h2></h2>
+      <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="padding_div">
+          <img class="logo_img" src="" alt="channel logo">
+          <p style="border:1px solid black">Offline</p>
+          <h2 style="border:1px solid black">Channel name</h2>
+        </div>
       </div>
-      <div class="spacer col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <img src="" alt="channel logo">
-        <p></p>
-        <h2></h2>
+      <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="padding_div">
+          <img class="logo_img" src="" alt="channel logo">
+          <p style="border:1px solid black">Offline</p>
+          <h2 style="border:1px solid black">Channel name</h2>
+        </div>
       </div>
     </div>
+    <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="padding_div">
+        <img class="logo_img" src="" alt="channel logo">
+        <p style="border:1px solid black">Offline</p>
+        <h2 style="border:1px solid black">Channel name</h2>
+      </div>
+    </div>
+    <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="padding_div">
+        <img class="logo_img" src="" alt="channel logo">
+        <p style="border:1px solid black">Offline</p>
+        <h2 style="border:1px solid black">Channel name</h2>
+      </div>
+    </div>
+  </div>
   </main>
   <footer>
     <p>This web application is built using <a href="https://www.mediawiki.org/wiki/API:Main_page" target="_blank">MediaWiki</a> action API</p>
