Finished CSS responsivness for channel profiles
added more placeholders for channel profile tags and completed CSS responsive futures for profile tags

--- a/index.html
+++ b/index.html
@@ -18,38 +18,66 @@
     </div>
   </section>
   </header>
+  <nav>
+    
+  </nav>
   <main  class="main_div container">
     <div class="row">
       <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="padding_div">
+          <div class="channel_banner"></div>
+          <p>Offline</p>
           <img class="logo_img" src="" alt="channel logo">
-          <p style="border:1px solid black">Offline</p>
-          <h2 style="border:1px solid black">Channel name</h2>
+          <h2>Channel name</h2>
+          <p>Channels activity</p>
         </div>
       </div>
       <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="padding_div">
+          <div class="channel_banner"></div>
+          <p>Offline</p>
           <img class="logo_img" src="" alt="channel logo">
-          <p style="border:1px solid black">Offline</p>
-          <h2 style="border:1px solid black">Channel name</h2>
+          <h2>Channel name</h2>
+          <p>Channels activity</p>
         </div>
       </div>
     </div>
-    <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <div class="padding_div">
-        <img class="logo_img" src="" alt="channel logo">
         <p style="border:1px solid black">Offline</p>
         <h2 style="border:1px solid black">Channel name</h2>
+          <p>Channels activity</p>
+        </div>
+      </div>
+      <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="padding_div">
+          <div class="channel_banner"></div>
+          <p>Offline</p>
+          <img class="logo_img" src="" alt="channel logo">
+          <h2>Channel name</h2>
+          <p>Channels activity</p>
+        </div>
       </div>
     </div>
-    <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <div class="padding_div">
-        <img class="logo_img" src="" alt="channel logo">
-        <p style="border:1px solid black">Offline</p>
-        <h2 style="border:1px solid black">Channel name</h2>
+    <div class="row">
+      <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="padding_div">
+          <div class="channel_banner"></div>
+          <p>Offline</p>
+          <img class="logo_img" src="" alt="channel logo">
+          <h2>Channel name</h2>
+          <p>Channels activity</p>
+        </div>
+      </div>
+      <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="padding_div">
+          <div class="channel_banner"></div>
+          <p>Offline</p>
+          <img class="logo_img" src="" alt="channel logo">
+          <h2>Channel name</h2>
+          <p>Channels activity</p>
+        </div>
       </div>
     </div>
-  </div>
   </main>
   <footer>
     <p>This web application is built using <a href="https://www.mediawiki.org/wiki/API:Main_page" target="_blank">MediaWiki</a> action API</p>
