search box margin
added 20px margin top and bottom of search input

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1 class="text-center">twitch.tv</h1>
-  <section>
+  <section class="search_section">
     <div class="text-center">
       <input type="text" name="search" id="search_input" placeholder="Search..">
       <button id="search_button" type="button">Search</button>
@@ -19,7 +19,7 @@
   </section>
   </header>
   <nav>
-    
+
   </nav>
   <main  class="main_div container">
     <div class="row">
@@ -42,9 +42,13 @@
         </div>
       </div>
     </div>
-      <div class="padding_div">
-        <p style="border:1px solid black">Offline</p>
-        <h2 style="border:1px solid black">Channel name</h2>
+    <div class="row">
+      <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="padding_div">
+          <div class="channel_banner"></div>
+          <p>Offline</p>
+          <img class="logo_img" src="" alt="channel logo">
+          <h2>Channel name</h2>
           <p>Channels activity</p>
         </div>
       </div>
