Added ajax call
Filled in one channel profile tag with data from twitch API,
added default background

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
   </section>
   </header>
   <nav>
-    
+
   </nav>
   <main  class="main_div container">
     <div class="row">
       <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="padding_div">
-          <div class="channel_banner"></div>
+          <div class="channel_banner" id="channel1_banner"></div>
           <p>Offline</p>
-          <img class="logo_img" src="" alt="channel logo">
-          <h2>Channel name</h2>
-          <p>Channels activity</p>
+          <img id="channel1_logo" class="logo_img" src="" alt="channel logo">
+          <h2 id="channel1_name"></h2>
+          <p id="channel1_status"></p>
         </div>
       </div>
       <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -83,6 +83,7 @@
     <p>This web application is built using <a href="https://www.mediawiki.org/wiki/API:Main_page" target="_blank">MediaWiki</a> action API</p>
     <p>Coded by <a href="https://www.facebook.com/IgorsPalcevskis" target="_blank">Igors Palcevskis<a></p>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="javascript.js"></script>
 </body>
