online status p element
added p element with reponse to channels online status

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="padding_div">
           <div class="channel_banner" id="channel1_banner"></div>
-          <p>Offline</p>
+          <p id="channel1_on_off">Offline</p>
           <img id="channel1_logo" class="logo_img" src="" alt="channel logo">
           <h2 id="channel1_name"></h2>
           <p id="channel1_status"></p>
