--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <div class="row">
       <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="padding_div">
-          <div class="channel_banner" id="channel_banner"></div>
-          <p id="channel_on_off">Offline</p>
-          <img id="channel_logo" class="logo_img" src="" alt="channel logo">
-          <h2 id="channel_name"></h2>
-          <p id="channel_status"></p>
+          <div class="channel_banner" id="channel1_banner"></div>
+          <p id="channel1_on_off">Offline</p>
+          <img id="channel1_logo" class="logo_img" src="" alt="channel logo">
+          <h2 id="channel1_name"></h2>
+          <p id="channel1_status"></p>
         </div>
       </div>
       <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
