ajax call for loop
attempting to succesfully for loop through ajax calls and write new set of html elements for each call

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   </nav>
   <main  class="main_div container">
-    <div class="row">
+    <div class="row" id="rowId">
 <!-- visual placeholder for js generated html code -->
 <!--  <div class="channel_frame col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="padding_div">
